# ed-news

./: .drone.yml  .env  .gitignore  CLAUDE.md  Gemfile  LICENSE  README.md  build.dockerfile  build.py  calculate_vectors.py  ednews.db  fetch.py  git-push-lfs.dockerfile  index.cards.html  index.html  index.rss  justfile  main.py  news.json  planet.ini  planet.json  pyproject.toml  pyrightconfig.json  requirements.txt  research.json  tmp_debug_news.db
.github/: copilot-instructions.md
.github/workflows/: delete-rows.yml  manage-db.yml  update-ed-news.yml
ben/: ben.txt  index.html.erb
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  DEVELOPMENT.md  PROCESSORS.md  README.md
ed-news/: index.html  index.rss
ednews/: __init__.py  build.py  cli.py  config.py  crossref.py  db.py  embeddings.py  feeds.py  http.py  main.py  manage_db.py  news.py  sciencedirect.py  text.py
ednews/cli/: __init__.py  build.py  (+9 more)
scripts/: delete_rows.py  fix_ellipses.py  fix_journal.py  get_crossref.py  get_crossref_doi.py  get_crossref_issn.py  update_planet_dois.py  update_planet_issn.py
static/: main.css  main.js
template/: index.cards.html.erb  index.html.erb  index.rss.erb  template.txt
templates/: articles.rss.jinja2  headlines.rss.jinja2  index.html.jinja2  index.rss.jinja2
tests/: conftest.py  test_article_exists.py  test_build.py  test_build_filters_empty_items.py  test_build_includes_news.py  test_cli_date_translation.py  test_cli_edworkingpapers_processor.py  test_cli_embed_flags.py  test_cli_embed_headlines.py  test_cli_fetch_flags.py  test_cli_postprocess_selects_feed_processor.py  test_cli_rematch_dois.py  test_cli_rematch_only_articles.py  test_cli_rematch_reports_article_counts.py  test_cli_remove_feed_articles.py  test_cli_remove_feed_discovery.py  test_cli_rss_preprocessor.py  test_combined_articles_published_formats.py  test_crossref.py  test_crossref_authors.py  test_crossref_choose_pref_nonfirst.py  test_crossref_integration.py  test_crossref_integration_publication_match.py  test_crossref_json_created.py  test_crossref_parsing_extra.py  test_crossref_publication_match.py  test_crossref_wrappers.py  test_db.py  test_db_and_embeddings.py  test_db_get_article_by_title.py  test_db_init.py  test_db_postprocessor_invocation.py  test_db_rematch_delete_on_unique_conflict.py  test_db_rematch_entries_none_for_postprocessor.py  test_db_rematch_fallback_to_crossref.py  test_db_rematch_only_missing.py  test_db_rematch_only_missing_title_update.py  test_db_rematch_only_wrong_skips_when_empty.py  test_db_rematch_orphan_articles.py  test_db_rematch_publication.py  (+54 more)
umich/: umich.cards.html.erb  umich.html.erb  umich.txt
(+88 files in other folders)
