[project]
name = "ed-news"
version = "2025.10.19"
description = "A static site generator and feed builder for news aggregation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.1",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "nomic[local]>=3.6.0",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
ednews = "ednews.cli:run"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly restrict package discovery to the actual Python package(s)
packages = { find = { include = ["ednews"] } }
