[project]
name = "ed-news"
version = "2025.11.01"
description = "A static site generator and feed builder for news aggregation."
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.11.0",
    "duckdb>=1.4.1",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "nomic[local]>=3.6.0",
    "numpy>=2.3.3",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
ednews = "ednews.cli:run"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly restrict package discovery to the actual Python package(s)
packages = { find = { include = ["ednews"] } }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",  # Ignore all DeprecationWarnings
    "ignore:.*U.*mode is deprecated:DeprecationWarning", # Ignore specific DeprecationWarning
    "error::RuntimeWarning", # Convert RuntimeWarnings into errors
]
